--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "slideout": "^1.0.1",
     "sockjs-client": "^1.3.0",
     "sticky-kit": "^1.1.3",
+    "swiper": "^11.1.9",
     "tether": "^1.4.6",
     "tether-drop": "^1.4.2",
     "timeago-react": "^3.0.0",
